--- a/index.html
+++ b/index.html
@@ -288,40 +288,40 @@
 
 
 
-<div class="modal" id="modalPriceCheck" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
+<div class="my-modal" id="modalPriceCheck" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
   
-        <div class="modal-content">
+        <div class="my-modal-content">
             <h5>Sorry!</h5>
             <p>We do not sell cars under $8000</p>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default modal-close" data-dismiss="modal">Close</button>
+            <button type="button" class="btn close" data-dismiss="modal">Close</button>
           </div>
         </div>
   
 </div>
-<div class="modal " id="modalInputCheck" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
+<div class="my-modal " id="modalInputCheck" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
   
-        <div class="modal-content">
+        <div class="my-modal-content">
             <h5>Input Error!</h5>
             <p>Please enter a number</p>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default modal-close" data-dismiss="modal">Close</button>
+            <button type="button" class="btn close" data-dismiss="modal">Close</button>
           </div>
         </div>
   
 </div>
-<div class="modal" id="modalNegCheck" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
+<div class="my-modal" id="modalNegCheck" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
   
-      <div class="modal-content">
+      <div class="my-modal-content">
           <h5>Input Error!</h5>
           <p>Your down payment is higher than the price</p>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default modal-close" data-dismiss="modal">Close</button>
+          <button type="button" class="btn close" data-dismiss="modal">Close</button>
         </div>
       </div>
    
 </div>
-<div id="modal1" class="modal">
+<div id="modal1" class="mymodal">
   <div class="modal-content">
     <h4>Modal Header</h4>
     <p>A bunch of text</p>
