Added stock number now working, fixed all errors, still remaining 2 apis and local storage

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
           <option value="chevrolet-camaro">Chevrolet Camaro</option>
           <option value="chevrolet-corvette">Chevrolet Corvette</option>
           <option value="chevrolet-suburban">Chevrolet Suburban</option>
+          <option value="chevrolet-silverado">Chevrolet Silverado</option>
 
 
 
