--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
     </div>
     <div class="">
       <div class="">
-        <label class="" for="customer">Phone and/or email</label>
-        <input type = "text" class="" id="yourPhoneEmail"></input>
+        <label for="customer">Phone and/or email</label>
+        <input type = "email" id="yourPhoneEmail"></input>
       </div>
     </div>
     <br>
