--- a/index.html
+++ b/index.html
@@ -324,6 +324,42 @@
 </div>
 </section>
 
+<section id="reach-out" class="contact">
+  <div class="flex-row">
+    <h2 class="section-title secondary-border">
+      Reach Out
+    </h2>
+  </div>
+
+  <div class="contact-info">
+    <div>
+      <h3>Mauny's Auto</h3>
+      <p>
+        Our Customer Service Department is at your complete disposal for any questions about Mauny's  
+        <br/>
+        Contact us and we'll be happy to assist you
+      </p>
+
+      <address>
+        27 King's College Cir<br/>
+        Toronto, ON <br/>
+        MST0B3<br/>
+        P: +1 (647) 989 8989<br/>
+        Ext: 501-509<br/>
+        E: <a href="mailto:mauny@maunyauto.com">mauny@maunyauto.com</a>
+      </address>
+      
+    </div>
+
+    <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12182.30520634488!2d-74.0652613!3d40.2407219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1561060983193!5m2!1sen!2sus"
+          frameborder="0" style="border:0" allowfullscreen>
+        </iframe>
+      </div>
+    
+    </section>
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
