contact us api added and css

--- a/index.html
+++ b/index.html
@@ -323,19 +323,18 @@
    
 </div>
 </section>
-
-<section id="reach-out" class="contact">
+section id="reach-out" class="contact">
   <div class="flex-row">
     <h2 class="section-title secondary-border">
-      Reach Out
+      Contact Us
     </h2>
   </div>
 
   <div class="contact-info">
     <div>
-      <h3>Mauny's Auto</h3>
+      <h3>Maunny</h3>
       <p>
-        Our Customer Service Department is at your complete disposal for any questions about Mauny's  
+        Our Customer Service Department is at your complete disposal for any questions about Maunny
         <br/>
         Contact us and we'll be happy to assist you
       </p>
@@ -346,7 +345,7 @@
         MST0B3<br/>
         P: +1 (647) 989 8989<br/>
         Ext: 501-509<br/>
-        E: <a href="mailto:mauny@maunyauto.com">mauny@maunyauto.com</a>
+        E: <a href="mailto:maunny@maunyauto.com">maunny@maunyauto.com</a>
       </address>
       
     </div>
@@ -358,6 +357,7 @@
       </div>
     
     </section>
+
 
 
 
