--- a/index.html
+++ b/index.html
@@ -358,7 +358,16 @@ section id="reach-out" class="contact">
     
     </section>
 
-
+    <footer>
+      <h2></h2>
+      <div>
+          <a href="https://github.com/JohnnyMatharu"><img src="./assets/images/25231.png">Johnny Matharu </a>
+          <a href="https://github.com/liaof"><img src="./assets/images/25231.png">Fanxi Liao </a>
+          <a href="https://github.com/DanyalKhanzada"><img src="./assets/images/25231.png">Danyal Khanzada </a>
+          <a href="https://github.com/temjanet"><img src="./assets/images/25231.png">Janet Tem </a><br/>
+          &copy; University of Toronto Coding Bootcamp 2021
+      </div>
+    </footer>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
