--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
    
 </div>
 </section>
-section id="reach-out" class="contact">
+<section id="reach-out" class="contact">
   <div class="flex-row">
     <h2 class="section-title secondary-border">
       Contact Us
