final touches contact us

--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@
       </p>
 
       <address>
+        Address:<br/>
         27 King's College Cir<br/>
         Toronto, ON <br/>
         MST0B3<br/>
