added 2nd API for everyday auto industry headlines

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a class="brand-logo left">The Maunny's Automotive Club</a>
         <div>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="lead-generation">Search a Vehicle</a></li>
+            <li><a href="#lead-generation">Search a Vehicle</a></li>
             <li><a href="#auto-finance">Financing a Vehicle</a></li>
           </ul>
         </div>
@@ -230,7 +230,7 @@
 
 
 <div class = "container center-align">
-        <div class = "heading "><h1>Payment Calculator</h1></div>
+        <div class = "heading " id = "auto-finance"><h1>Payment Calculator</h1></div>
         <div class = "row inquiry">
         <form class = "interest left-align col s12 l6 offset-l3" id = "payment">
             
@@ -323,6 +323,32 @@
    
 </div>
 </section>
+<!-- this is for headlines -->
+<section class ="headLines">
+  <h1>Top Headlines <i class="far fa-newspaper"></i></h1>
+  <br>
+  <br>
+<h6 id = "headLine1"></h6>
+
+<h6 id = "headLine2"></h6>
+
+<h6 id = "headLine3"></h6>
+
+<h6 id = "headLine4"></h6>
+
+<h6 id = "headLine5"></h6>
+
+<h6 id = "headLine6"></h6>
+
+<h6 id = "headLine7"></h6>
+
+<h6 id = "headLine8"></h6>
+
+<h6 id = "headLine9"></h6>
+
+<h6 id = "headLine10"></h6>
+</section>
+<!-- headlines end here -->
 <section id="reach-out" class="contact">
   <div class="flex-row">
     <h2 class="section-title secondary-border">
