added landing image, next is sign up bar in middle

--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@ data could also flow inside a div like facebook, flowing non-stop engaging data
           </div>
     </nav>
   </header>
+<section class="landingPage">
 
+</section>
 
 <!-- old code starts -->
 
