added sign in colour and second section vehicle search padding

--- a/index.html
+++ b/index.html
@@ -1,45 +1,3 @@
-<!-- 1k -->
-
-
-<!-- Map -->
-<!-- Pseudocode steps -->
-<!-- One step at a time  -->
-<!-- Gather info   -->
-<!-- Rehearse -Test -Action  -->
-<!-- Double check final product  -->
-
-
-<!-- Use all github work incl challenges, projects and modules, make minor sections if needed, watch youtube videos on advanced css, wireframing, ux/ui etc. for now -->
-<!-- No pictures allowed, only illustrations and pictures could be included in reference to any data in the illustration (data illustration). Bigger paid illustration landing-main page, minor ones make self, use font awesome for icons, consult minimum of 9 top sites before minor addition
-  illustrations can be made to create a div such as cell and inside is a data illustration, a thick nice tyre and inside another data or illustration, a real mechanic wall window and data inside/chat
-data could also flow inside a div like facebook, flowing non-stop engaging data
-1. Amazon
-2. Facebook
-3. Google
-5. Guabgoo
-6. S Media
-7. Canada Drives
-8. Wish
-9. Git Hub 
--->
-
-<!-- 1. Focused landing page with engaging design(photographic/illustrative), beginning with responsive cell view design -->
-<!-- 2. highly stuctured content with shape, limiting proportionaltly in sections, engaging content flow -->
-<!-- 3. business utility and not limiting to website functionality -->
-<!-- 4. Page 1 and 2 is about communication, videos, kicking ideas, illustrations of all technicalities, pics of automotives -->
-<!-- 5. Page 3 and 4 is about free knowledge, all stuff rel to government business licensing or approvals/vin search/carfax etc.  -->
-<!-- 6. Page 5 and 6 is about payment and top performing car stocks-->
-
-
-<!-- wireframing for one page, then advanced wireframing per section, 100% wireframe must be ready before start -->
-<!-- majority illustrations will be similar to pics selected, use mock pics as needed -->
-<!-- use color chemeing as similar to what you want, structure should be fully ready to go before functionality js-->
-
-
-<!-- modals, Advanced css and html to create backbone, responsiveness, wireframe before (incl. algorithms, majority illustrations than pics, use famous sources and other student’s projects and site developers tools  -->
-<!-- js to add functionality after foundation is ready -->
-<!-- Top 3 readings: 1. Javascript, 2. advanced css and css 3. html  (this is post May 1st)-->
-
 
 
 
@@ -84,7 +42,7 @@ data could also flow inside a div like facebook, flowing non-stop engaging data
             </ul>
             </div>
             <div class = "navigation">
-            <button>Sign in</button>
+            <button id =buttonClr>Sign in</button>
             <!-- add this on media queries <li><i class="fas fa-bars"></i></li> -->
           </div>
     </nav>
@@ -97,11 +55,12 @@ data could also flow inside a div like facebook, flowing non-stop engaging data
 
 
 
-  <div class = "container center-align">
+  <div class ="vehicleSearch">
    
-    <div id="lead-generation" class = "heading "><h1 class="heading-text">Vehicle Search Inquiry</h1></div>
+    
 
-    <div class = "row inquiry">
+    <div class = "row-inquiry">
+      <h1 class="heading-text">Vehicle Search Inquiry</h1>
     <!-- this part will have 2 divs 50%, one inquiryText and other inquiryPicture for picture section, change id and class names as needed  -->
      <div class = " col s12 l6">
      <!-- this is left div beg -->
