added structure and shape to vehicle search, next add placeholder to stock number, next is stock request section with pop up modal saying 'we have recieved information, someone will contact you on...

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <option value="YYYY" selected>----</option>
         </select>
 <!-- you can use getelementbyID and attach models when users click on make, as event listener, list can populate for that make for models-->
-
+<div id = "search2">
         <label for="cars">Mileage in km:</label>
         <select id="mileage" class="">
           <option value="50">0 to 50,000 km</option>
@@ -191,10 +191,16 @@
           <option value="250">2,00,000 to 2,50,000 km</option>
         </select>
         <br>
+     <br>
+     <br>
+        </div>
+        <div id = "search3">
         <button class = "btn" id = "submitBtn" type="submit" name="submit" value="submit">Submit</button>
+        </div>
       </form>
 
-      <br><br>
+      <br>
+      <br>
     </div>
   <!-- this is end of left div -->
 
