All fixed next stock request section, need modal

--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
         <img id = "carDisplay"/> 
     <!-- insert place holder div -->
       </div>
-      <div id = "stockDisplay" >
+      <div id = "stockPosition">
+        <label id = "stockDisplay">Stock Number</label>
     <!-- this is for stock number use in js to display stock, may have to use flex box #, make sure bottom margin of page fits -->
       </div>
 <!-- this is end of car Pictures div -->
