added vehicle information structure

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     
       <br>
       <div id ="interest4">
-      <button type="submit" name="submit" value="submit" class="btn">Submit</button>
+      <button type="submit" id ="submitBtn" name="submit" value="submit" class="btn">Submit</button>
     </div>
     </form>
   </div>
