added Maunny's Club

--- a/index.html
+++ b/index.html
@@ -352,12 +352,27 @@
 </section>
 <!-- new section start -->
 <section id = "club">
-  <div class = "heading">
-  <h1 id = "head4">The Maunny's Club</h1>
-</div>
+<div id = "displayGallery"><div id = "head4">
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <h1>The Maunny's Club</h1>
+</div></div>
 </section>
 <section id = "mechanic">
   <div class = "heading">
+    <br>
+    <br>
+    <br>
   <h1 id = "head5">Mechanic Window</h1>
 </div>
 </section>
