added Mechanic Window

--- a/index.html
+++ b/index.html
@@ -354,19 +354,11 @@
 <section id = "club">
 <div id = "displayGallery"><div id = "head4">
   <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
   <h1>The Maunny's Club</h1>
-</div></div>
+</div>
+
+
+</div>
 </section>
 <section id = "mechanic">
   <div class = "heading">
@@ -375,6 +367,7 @@
     <br>
   <h1 id = "head5">Mechanic Window</h1>
 </div>
+<div id ="window"> <div id ="padding-left">1</div>   <div id ="window1">2</div>   <div id ="toolSubmit">3</div>  <div id ="window2">4</div> <div id ="padding-right">5</div> </div>
 </section>
 
 <section id="reach-out" class="contact">
