added Window section layout color

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
     <br>
   <h1 id = "head5">Mechanic Window</h1>
 </div>
-<div id ="window"> <div id ="padding-left">1</div>   <div id ="window1">2</div>   <div id ="toolSubmit">3</div>  <div id ="window2">4</div> <div id ="padding-right">5</div> </div>
+<div id ="window"> <div id ="padding-left"></div>   <div id ="window1"></div>   <div id ="toolSubmit"></div>  <div id ="window2"></div> <div id ="padding-right"></div> </div>
 </section>
 
 <section id="reach-out" class="contact">
@@ -429,3 +429,30 @@
 </html>
 
 
+
+<!-- this is for headlines 
+<section class ="headLines">
+  <h1>Top Headlines <i class="far fa-newspaper"></i></h1>
+  <br>
+  <br>
+<h6 id = "headLine1"></h6>
+
+<h6 id = "headLine2"></h6>
+
+<h6 id = "headLine3"></h6>
+
+<h6 id = "headLine4"></h6>
+
+<h6 id = "headLine5"></h6>
+
+<h6 id = "headLine6"></h6>
+
+<h6 id = "headLine7"></h6>
+
+<h6 id = "headLine8"></h6>
+
+<h6 id = "headLine9"></h6>
+
+<h6 id = "headLine10"></h6>
+</section>
+ headlines end here -->
