added scroll bar

--- a/index.html
+++ b/index.html
@@ -367,7 +367,32 @@
     <br>
   <h1 id = "head5">Mechanic Window</h1>
 </div>
-<div id ="window"> <div id ="padding-left"></div>   <div id ="window1"></div>   <div id ="toolSubmit"></div>  <div id ="window2"></div> <div id ="padding-right"></div> </div>
+<div id ="window"><div id ="padding-left"></div>   <div id ="window1">Efficient honorificabilitudinitatibus cross-media information without 
+  floccinaucinihilipilification cross-media value. Quickly maximize timely deliverables for real-time 
+  schemas plenipotentiary.Efficient honorificabilitudinitatibus cross-media information without 
+  floccinaucinihilipilification cross-media value. Quickly maximize timely deliverables for real-time 
+  schemas plenipotentiary.Efficient honorificabilitudinitatibus cross-media information without 
+  floccinaucinihilipilification cross-media value. Quickly maximize timely deliverables for real-time 
+  schemas plenipotentiary.Efficient honorificabilitudinitatibus cross-media information without 
+  floccinaucinihilipilification cross-media value. Quickly maximize timely deliverables for real-time 
+  schemas plenipotentiary.Efficient honorificabilitudinitatibus cross-media information without 
+  floccinaucinihilipilification cross-media value. Quickly maximize timely deliverables for real-time 
+  schemas plenipotentiary.Efficient honorificabilitudinitatibus cross-media information without 
+  floccinaucinihilipilification cross-media value. Quickly maximize timely deliverables for real-time 
+  schemas plenipotentiary.</div>   
+  <div id ="toolSubmit"></div>  <div id ="window2">Efficient honorificabilitudinitatibus cross-media information without 
+    floccinaucinihilipilification cross-media value. Quickly maximize timely deliverables for real-time 
+    schemas plenipotentiary.Efficient honorificabilitudinitatibus cross-media information without 
+    floccinaucinihilipilification cross-media value. Quickly maximize timely deliverables for real-time 
+    schemas plenipotentiary.Efficient honorificabilitudinitatibus cross-media information without 
+    floccinaucinihilipilification cross-media value. Quickly maximize timely deliverables for real-time 
+    schemas plenipotentiary.Efficient honorificabilitudinitatibus cross-media information without 
+    floccinaucinihilipilification cross-media value. Quickly maximize timely deliverables for real-time 
+    schemas plenipotentiary.Efficient honorificabilitudinitatibus cross-media information without 
+    floccinaucinihilipilification cross-media value. Quickly maximize timely deliverables for real-time 
+    schemas plenipotentiary.Efficient honorificabilitudinitatibus cross-media information without 
+    floccinaucinihilipilification cross-media value. Quickly maximize timely deliverables for real-time 
+    schemas plenipotentiary.</div> <div id ="padding-right"></div> </div>
 </section>
 
 <section id="reach-out" class="contact">
