added a post button to mechanic window

--- a/index.html
+++ b/index.html
@@ -353,10 +353,7 @@
 <!-- new section start -->
 <section id = "club">
 <div id = "displayGallery" class = "hide">
-  <div id = "head4">
-    <br>
-    <h1>The Maunny's Club</h1>
-  </div>
+  
   <div id = "flex">
 
 <!-- flex box start -->
@@ -468,7 +465,9 @@
   <h1 id = "head5">Mechanic Window</h1>
 </div>
 <div id ="window"><div id ="padding-left"></div>     
-  <div id ="toolSubmit"></div> <div id ="padding-right"></div> </div>
+  <div id ="toolSubmit">
+    <button type="button" id ="sizeButton" class="btn btn-primary btn-lg">Post Request</button>
+  </div> <div id ="padding-right"></div> </div>
 </section>
 
 <section id="reach-out" class="contact">
