changes to make code presentable

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
     <footer>
       <h2></h2>
-      <div><address>
+      <div id ="height"><address>
         Address: 27 King's College Cir, Toronto, ON, MST0B3<br/>
         P: +1 (647) 989 8989, Ext: 501-509<br/>
         E: <a href="mailto:maunny@maunyauto.com">maunny@maunyauto.com</a>
