--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
 </div>
 <!-- this is parent boundary div for both left and right div ending i.e. flex container-->
 <div class = "container">
+<div class = "container1">
     <div class = "heading"><h1 id ="head1">Select Vehicle</h1></div>
     <div>
     <form id =interest>
@@ -247,7 +248,7 @@
 </div>
 
 
-<div class = "container">
+<div class = "container2">
         <div class = "heading " id = "auto-finance"><h1 id ="head2">Payment Calculator</h1></div>
         <div>
           <form class = "interest left-align col s12 l6 offset-l3" id = "payment">
@@ -297,9 +298,9 @@
             <br>
             <div id = "interest4">
             <button type="submit" id = "submitBtn">Submit</button>
-            
+            <div id="space"></div>
             <h3 class= "" id = "paymentValue"></h3>
-            <p class= ""id = "feeTaxes"></p>
+            
           </div>
         </div>
         </form>
@@ -341,6 +342,7 @@
         </div>
       </div>
    
+</div>
 </div>
 </section>
 <!-- new section start -->
