--- a/index.html
+++ b/index.html
@@ -342,6 +342,20 @@
         </div>
       </div>
    
+      <!-- to be checked for modal  -->
+    </div>
+    <div class="my-modal" id="modalInfoSave" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
+      
+          <div class="my-modal-content">
+              <h5>Information Saved</h5>
+              <p>We have recieved your request, some one will get back to you in 60 minutes, we have your information and it could be seen next time you use it</p>
+            <div class="modal-footer">
+              <button type="button" class="btn close" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+
+
+
 </div>
 </div>
 </section>
