adjustments to media queries

--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 <!-- this is main flex box -->
 
 <div id ="searchBox1">
+  <div id = "headingFirst">
       <h1 class="heading-text" id ="Search">Vehicle Search Inquiry</h1>
     <!-- this part will have 2 divs 50%, one inquiryText and other inquiryPicture for picture section, change id and class names as needed  -->
-  
+  </div>
     <div class = " col s12 l6">
      <!-- this is left div beg -->
       <form class ="left-align" id="search">
