added map changes

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             
             
                 <div id ="payment4">
-                    <label class="" for="v-interval">Chose payment interval</label>
+                    <label class="" for="v-interval">Choose payment interval</label>
                     <select class=" " id="v-interval">
                         <option value="4">Weekly</option>
                         <option value="2">Bi-Monthly</option>
@@ -372,7 +372,7 @@
 <!-- new section start -->
 
 
-    <footer>
+    <footer id ="pad">
       <h2></h2>
       <div id ="height"><address>
         Address: 27 King's College Cir, Toronto, ON, MST0B3<br/>
